--- a/gaming-app/src/pages/Home/home.css
+++ b/gaming-app/src/pages/Home/home.css
@@ -8,6 +8,10 @@ body {
     background-color: #f2f2f2;
 }
 
+.navigation-menu{
+    display: flex;
+    align-items: center;
+}
 nav {
     display: flex;
     align-items: center;
@@ -23,7 +27,7 @@ nav img {
 
 .navigation-menu a {
     margin-right: 40px;
-    font-size: 30px;
+    font-size: 25px;
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 600;
@@ -72,7 +76,7 @@ footer span{
 }
 .ecommerce h2{
     color: white;
-    font-size: 45px;
+    font-size: 39px;
 }
 .webshop p{
     color: white;
