--- a/gaming-app/src/pages/Home/home.css
+++ b/gaming-app/src/pages/Home/home.css
@@ -1,17 +1,28 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #f2f2f2;
+    background-color: #0e0e0e;
 }
 
 .navigation-menu{
     display: flex;
     align-items: center;
 }
+.logo-div {
+    display: flex;
+    align-items: center;
+    color: white;
+    
+}
+a {
+    text-decoration: none;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -31,12 +42,12 @@ nav img {
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 600;
-    color: #4082b4;
+    color: white;
 }
 
 .navigation-menu a:hover{
-    border-bottom: 4px solid #9e0382;
-    color: #9e0382;
+    border-bottom: 4px solid #c00000;
+    color: #c00000;
     transition: 0.2s ease;
 }
 .login{
@@ -46,9 +57,90 @@ nav img {
     color: #4687b8;
     transition: 0.2s ease;
 }
+
+/*Main Content*/
+.home-container {
+    max-height: 100%;
+}
+.carousel {
+    height: 550px;
+    position: relative;
+}
+.slider-container {
+    height: 500px;
+    position: relative;
+}
+
+/*dugmici za slajdovanje*/
+.css-1m9128y {
+    position: absolute !important;
+}
+.slider-img {
+    height: 500px;
+    width: 100%;
+}
+/*slider button*/
+/*mora da se koristi !important zato sto material ui ima ugradjene stilove*/
+.CheckButton {
+    border-radius: 15px !important;
+    background-color: #4082b4 !important;
+    position: absolute !important;
+    color: white !important;
+    font-weight: 600 !important;
+    padding: 1em !important;
+    bottom: 20px !important;
+}
+.CheckButton:hover {
+    background-color: #c00000 !important;
+    color: white !important;
+    transition: 0.4s ease !important;
+}
+
+/*material ui selector za div oko slidera koji mu daje padding*/
+.css-1ps6pg7-MuiPaper-root {
+    padding: 0 !important;
+}
+
+.promotions {
+    display: flex;
+    height: 400px;
+    padding: 2em;
+    width: 100%;
+    justify-content: space-around;
+}
+.promo-img {
+    height: 300px;
+    width: 500px;
+}
+.promo-img > img {
+    width: 100%;
+    height: 100%;
+}
+
+.popular-categories {
+    padding: 2em;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    height: 500px;
+    background-color: #c00000;
+}
+.kategorije {
+    padding: 5em;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+.kategorije > a {
+    margin: 1em;
+}
+.kategorije > a > h3 {
+    margin-top: 10px;
+    color: white;
+}
 /*Footer*/
 footer{
-    background-color: #4082b4;
+    background-color: #0e0e0e;
     padding: 50px;
 }
 
@@ -98,6 +190,7 @@ footer span{
 }
 .delivery{
     display: flex;
+    justify-content: space-between;
     width: 75%;
     margin: 0 auto 2rem;
 }
