--- a/gaming-app/src/pages/Home/home.css
+++ b/gaming-app/src/pages/Home/home.css
@@ -7,6 +7,11 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #0e0e0e;
+    overflow-x: hidden;
+}
+
+main {
+    color: white;
 }
 
 .navigation-menu{
@@ -122,21 +127,26 @@ nav img {
     text-align: center;
     color: white;
     font-weight: bold;
-    height: 500px;
+    height: 100%;
     background-color: #c00000;
 }
 .kategorije {
     padding: 5em;
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .kategorije > a {
-    margin: 1em;
+    margin: 0 2em 2em 2em;
 }
 .kategorije > a > h3 {
     margin-top: 10px;
     color: white;
+}
+.kategorije > a > h3:hover {
+    color: black;
+    transition: 0.4s ease;
 }
 /*Footer*/
 footer{
