--- a/gaming-app/src/pages/Products/SidebarFilter.css
+++ b/gaming-app/src/pages/Products/SidebarFilter.css
@@ -1,6 +1,8 @@
 .sidebar-container {
-    color: white;
+    color: black;
     max-height: 100%;
     width: 400px;
     background-color: white;
+    text-align: center;
+    padding-top: 20px;
 }
