--- a/gaming-app/src/pages/Products/SidebarFilter.css
+++ b/gaming-app/src/pages/Products/SidebarFilter.css
@@ -5,4 +5,16 @@
     background-color: white;
     text-align: center;
     padding-top: 20px;
+    padding-left: 40px;
+}
+.filter-div {
+    margin-top: 30px;
+    padding: 10px;
+}
+.checkboxes {
+    margin: auto;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
