--- a/gaming-app/src/components/Modal/Modal.css
+++ b/gaming-app/src/components/Modal/Modal.css
@@ -1,10 +1,45 @@
-.modal-container {
-    color: red;
-}
-
 .modal-background {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
     z-index: 500;
-    width: 100%;
-    height: 100%;
-    background-color: red;
+    width: 100vw;
+    height: 100vw;
+    background-color: rgba(0, 0, 0, 0.623);
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+}
+.modal-container {
+    color: black;
+    background-color: white;
+    margin-top: 300px;
+    padding: 1em 2em;
+    border-radius: 15px;
+    max-width: 500px;
+}
+.modal-title {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.modal-title > h3 {
+    margin-right: 50px;
+}
+.exit-btn {
+    padding: 10px 20px;
+    margin-left: 50px;
+}
+.modal-img {
+    display: flex;
+    justify-content: center;
+}
+.product-description {
+    margin-top: 10px;
+}
+.product-description > p {
+    text-align: center;
 }
